[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/game_objects/Ladder Animation/ghost_ladder_block.png" type="Texture" id=1]
[ext_resource path="res://scenes_two/GhostLadder.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/fail_drop_ladder.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/game_objects/Ladder Animation/Ladder Animation7.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 168 )

[node name="GhostLadder" type="Node2D"]
modulate = Color( 1, 1, 1, 0.392157 )
script = ExtResource( 2 )

[node name="LadderOk" type="Sprite" parent="."]
position = Vector2( -9.53674e-07, -1.52588e-05 )
texture = ExtResource( 4 )

[node name="LadderBlock" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="NoDrop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
